--- a/src/main/resources/assets/persona/lang/zh_cn.json
+++ b/src/main/resources/assets/persona/lang/zh_cn.json
@@ -68,5 +68,5 @@
 
   "persona.active_marks": "启用",
   "persona.available_marks": "可用",
-  "persona.bookmark_tip": "点击编辑，在左侧拖拽以换位，从右侧拖拽以添加到启用侧",
+  "persona.bookmark_tip": "点击编辑，在左侧拖拽以换位，从右侧拖拽以添加到启用侧"
   }
